--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -53,7 +53,7 @@
 <section id="group_ANTISPAM" class="spartacus-group">
     <h3>Antispam</h3>
     <div id="serendipity_event_email_bot_obfuscator" class="plugin">
-        <h4 class="plugin_summary">Markup: clickable email adresses - but with antispam</h4>
+        <h4 class="plugin_summary">Markup: clickable email addresses - but with antispam</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_email_bot_obfuscator</dt>
             <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2016-07-07)</dd>
@@ -416,7 +416,7 @@
         <h4 class="plugin_summary">My Mood</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mymood</dt>
-            <dd class="plugin_version">Version 0.12 (GPL, Last Updated 2018-08-11)</dd>
+            <dd class="plugin_version">Version 0.13 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Brett Profitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -480,15 +480,15 @@
         <h4 class="plugin_summary">Split long entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrysplit</dt>
-            <dd class="plugin_version">Version 1.5.6 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Tadashi Jokagi, Thomas Werner</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Enables you to split longer entries into several subpages and provides you with an auto-generated table of contents</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_entrysplit.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_entrysplit">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrysplit" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrysplit" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_entrysplit/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1252,15 +1252,15 @@
         <h4 class="plugin_summary">Comics</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_comics</dt>
-            <dd class="plugin_version">Version 1.4.1 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Wesley Hwang-Chung</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Run webcomics in your blog</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_comics.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_comics">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_comics" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_comics" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_comics/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -1316,9 +1316,9 @@
         <h4 class="plugin_summary">HTML Nugget on Page</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_page_nugget</dt>
-            <dd class="plugin_version">Version 1.14 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.15 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Wesley Hwang-Chung</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Puts an HTML nugget on top or bottom of the page, or inside the page's HEAD tag</p>
         <ul class="plugin_actions">
@@ -1396,7 +1396,7 @@
         <h4 class="plugin_summary">My Mood</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mymood</dt>
-            <dd class="plugin_version">Version 0.12 (GPL, Last Updated 2018-08-11)</dd>
+            <dd class="plugin_version">Version 0.13 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Brett Profitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -1428,15 +1428,15 @@
         <h4 class="plugin_summary">Show last modification date</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrylastmodified</dt>
-            <dd class="plugin_version">Version 1.9 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.10 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Shows a message with the last modification date of an entry on the blogs frontpage. For not modified entries shows a message that says they are not modified.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_entrylastmodified.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_entrylastmodified">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrylastmodified" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_entrylastmodified" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_entrylastmodified/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -2280,9 +2280,9 @@
         <h4 class="plugin_summary">Photoblog Entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_photoblog</dt>
-            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2016-07-07)</dd>
+            <dd class="plugin_version">Version 1.7 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Cameron MacFarland</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Adds a single image to an entry.</p>
         <ul class="plugin_actions">
@@ -2617,7 +2617,7 @@
     </div>
 
     <div id="serendipity_event_email_bot_obfuscator" class="plugin">
-        <h4 class="plugin_summary">Markup: clickable email adresses - but with antispam</h4>
+        <h4 class="plugin_summary">Markup: clickable email addresses - but with antispam</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_email_bot_obfuscator</dt>
             <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2016-07-07)</dd>
@@ -2752,9 +2752,9 @@
         <h4 class="plugin_summary">Karma</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_karma</dt>
-            <dd class="plugin_version">Version 2.13 (GPL, Last Updated 2017-02-02)</dd>
+            <dd class="plugin_version">Version 2.14 (GPL, Last Updated 2018-08-15)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Grischa Brockhaus, Judebert, Gregor Voeltz, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Let visitors rate your entries</p>
         <ul class="plugin_actions">
