hc: Update installer upgrade guide

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -134,6 +134,7 @@
 
 <h3 id="user-content-the-important-upgraders-howto---step-by-step-guide">The important Upgraders HowTo - Step by Step Guide:</h3>
 <p><strong>Preamble:</strong> (<em>If not using Styx already, and having done that before...</em>)</p>
+<p><strong>Please note</strong>: The more Serendipity Styx develops and time passes by, the more it differs from the origin, since having already passed 2K commit changes! The normal version upgrade UPGRADER includes all tasks which are necessary to successful proceed between versions. The following Guide here was meant to help migrating this "Origin-to-Styx" process to first release 2.1.0, over to 2.2, 2.3 and 2.4.0. In this very moment of writing this text, Serendipity Styx heads to become version 2.6.0 very soon and <strong>Styx</strong> has come a long way with lots of changes. It would require to inspect and update this guide in deep to jump to latest release without any possible flaws. I would recommend to use 2.4 for this jump as described, feel at home a little bit and then use the normal Serendipity Autoupdate or manual forced upgrades to do the rest for the current state. Needless to say: Best of all is a complete <strong>new</strong> installation.</p>
 
 <ul>
     <li><em>If you are still with Serendipity <strong>1.6</strong> or <strong>1.7</strong> Series, please follow this guides points “a” to “c”.</em></li>
