hc: update primers for OOP PSR

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -699,7 +699,7 @@ print_r($entries);
 
 <ul>
   <li>Use 4 spaces to indent code</li>
-  <li>Put opening braces on the same line like the preceding logic, put closing braces on a new line:
+  <li>Put opening braces on the same line like the preceding logic, except for OOP-Method-Syntax since that relies on <a href="https://www.php-fig.org/psr/" target="blank">PSR</a>, put closing braces on a new line:
     <pre><code>if (condition) {
     // code
 }
