--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -4,7 +4,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2017-02-10)</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -152,7 +152,7 @@
         <h4 class="plugin_summary">Spamblock Bee (Honeypot, Hidden Captcha)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_spamblock_bee</dt>
-            <dd class="plugin_version">Version 1.3.4 (GPL, Last Updated 2018-04-24)</dd>
+            <dd class="plugin_version">Version 1.3.5 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Janek Bevendorff</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -172,7 +172,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2017-02-10)</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -400,9 +400,9 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.42 (GPL, Last Updated 2018-08-15)</dd>
+            <dd class="plugin_version">Version 2.50 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
         <p class="plugin_description">Allows to create multiple language versions of an entry</p>
         <ul class="plugin_actions">
@@ -464,7 +464,7 @@
         <h4 class="plugin_summary">Show Emoticon/Smiley toolbar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_emoticonchooser</dt>
-            <dd class="plugin_version">Version 3.22 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 3.23 (GPL, Last Updated 2018-08-19)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jay Bertrandt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.45 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 5.46 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -708,7 +708,7 @@
         <h4 class="plugin_summary">Dashboard Feed Reader</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_feed</dt>
-            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2017-02-10)</dd>
+            <dd class="plugin_version">Version 1.04 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0.0</dd>
         </dl>
@@ -740,7 +740,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.81 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -772,7 +772,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.67 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 3.68 (GPL, Last Updated 2018-08-19)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -788,7 +788,7 @@
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linklist</dt>
-            <dd class="plugin_version">Version 2.05 (GPL, Last Updated 2017-10-06)</dd>
+            <dd class="plugin_version">Version 2.06 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -804,7 +804,7 @@
         <h4 class="plugin_summary">Linktrimmer</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linktrimmer</dt>
-            <dd class="plugin_version">Version 1.6.9 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 1.7.0 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.45 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 5.46 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1100,7 +1100,7 @@
         <h4 class="plugin_summary">Toggle Sidebar state (collapsed/uncollapsed)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_sidebarhider</dt>
-            <dd class="plugin_version">Version 1.31 (GPL, Last Updated 2017-02-19)</dd>
+            <dd class="plugin_version">Version 1.32 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Tys von Gaza, Garvin Hicking, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -1380,9 +1380,9 @@
         <h4 class="plugin_summary">Multilingual entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_multilingual</dt>
-            <dd class="plugin_version">Version 2.42 (GPL, Last Updated 2018-08-15)</dd>
+            <dd class="plugin_version">Version 2.50 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
         <p class="plugin_description">Allows to create multiple language versions of an entry</p>
         <ul class="plugin_actions">
@@ -1512,8 +1512,8 @@
         <h4 class="plugin_summary">Highlight search queries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_searchhighlight</dt>
-            <dd class="plugin_version">Version 1.8.3 (GPL, Last Updated 2018-04-14)</dd>
-            <dd class="plugin_maintainers">Tom Sommer</dd>
+            <dd class="plugin_version">Version 1.8.4 (GPL, Last Updated 2018-08-20)</dd>
+            <dd class="plugin_maintainers">Tom Sommer, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Highlights queries used in the referring search engine to locate your page</p>
@@ -1676,7 +1676,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.81 (GPL, Last Updated 2018-04-06)</dd>
+            <dd class="plugin_version">Version 1.82 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1724,7 +1724,7 @@
         <h4 class="plugin_summary">Guestbook</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_guestbook</dt>
-            <dd class="plugin_version">Version 3.67 (GPL, Last Updated 2018-08-10)</dd>
+            <dd class="plugin_version">Version 3.68 (GPL, Last Updated 2018-08-19)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7.0</dd>
         </dl>
@@ -2068,7 +2068,7 @@
         <h4 class="plugin_summary">Link List</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_linklist</dt>
-            <dd class="plugin_version">Version 2.05 (GPL, Last Updated 2017-10-06)</dd>
+            <dd class="plugin_version">Version 2.06 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Omid Mottaghi Rad, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2216,7 +2216,7 @@
         <h4 class="plugin_summary">Gallery Display</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_usergallery</dt>
-            <dd class="plugin_version">Version 2.69 (GPL, Last Updated 2018-03-27)</dd>
+            <dd class="plugin_version">Version 2.70 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Arnan de Gans, Matthew Groeninger, and Stefan Willoughby, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2248,7 +2248,7 @@
         <h4 class="plugin_summary">Lightbox for entry images</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_lightbox</dt>
-            <dd class="plugin_version">Version 2.5.1 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 2.5.2 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Thomas Nesges, Andy Hopkins, Lokesh Dhakar, Cody Lindley, Stephan Manske, Grischa Brockhaus, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -2524,7 +2524,7 @@
         <h4 class="plugin_summary">Markup: Smarty Parsing</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_smartymarkup</dt>
-            <dd class="plugin_version">Version 1.16 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 1.17 (GPL, Last Updated 2018-08-20)</dd>
             <dd class="plugin_maintainers">Garvin Hicking</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
