--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -496,7 +496,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.46 (GPL, Last Updated 2018-08-20)</dd>
+            <dd class="plugin_version">Version 5.50 (GPL, Last Updated 2018-08-23)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -916,7 +916,7 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.46 (GPL, Last Updated 2018-08-20)</dd>
+            <dd class="plugin_version">Version 5.50 (GPL, Last Updated 2018-08-23)</dd>
             <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -1781,6 +1781,22 @@
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_commentsearch.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_commentsearch">GitHub</a></li>
             <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_commentsearch" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_commentsearch/ChangeLog">ChangeLog</a></li>
+        </ul>
+    </div>
+
+    <div id="serendipity_event_staticpage" class="plugin">
+        <h4 class="plugin_summary">Static Pages</h4>
+        <dl class="plugin_meta">
+            <dt class="plugin_name">serendipity_event_staticpage</dt>
+            <dd class="plugin_version">Version 5.50 (GPL, Last Updated 2018-08-23)</dd>
+            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
+        </dl>
+        <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
+        <ul class="plugin_actions">
+            <li class="plugin_download"><a href="#additional_plugins/serendipity_event_staticpage.zip">Download</a></li>
+            <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_staticpage">GitHub</a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_staticpage" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_staticpage/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
