--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1348,9 +1348,9 @@
         <h4 class="plugin_summary">Links to next/previous entry</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrypaging</dt>
-            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2016-07-07)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.50 (GPL, Last Updated 2018-08-26)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Allows viewing the next/previous entry when viewing</p>
         <ul class="plugin_actions">
