themes: Update Spartacus for upcoming Styx 2.6.0 changes

--- a/themes/index.html
+++ b/themes/index.html
@@ -121,7 +121,7 @@
                         <li><a href="#costa-nature_theme">CoSTa's Nature Theme v0.6 (2013-02-07)</a></li>
                         <li><a href="#coffee_bar">Coffee Bar v1.1 (2008-02-14)</a></li>
                         <li><a href="#connections">Connections WP-port (2008-02-14)</a></li>
-                    <li class="core-themes"><a href="#default">Default [fallback]</a></li>
+                    <li class="core-themes"><a href="#default">Default [backend & fallback]</a></li>
                         <li><a href="#earphone">Earphone (2007-04-03)</a></li>
                         <li><a href="#elitist-latte">Elitist Latte (2007-04-03)</a></li>
                         <li><a href="#freshy">Freshy (2008-11-13)</a></li>
@@ -235,8 +235,8 @@
                     <p>&nbsp;</p>
                     <div class="spartacus-group">
                         <h3>Serendipity Styx Release: Themes</h3>
-                        <div id="2k11" class="theme release"><h4 class="theme_summary">2k11 [backend]</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="/i/t/preview_backend_fullsize_00.jpg"></dt><dd class="theme_version">version 2017, <em>BSD license</em>, 26/06/2017)</dd><dd class="theme_maintainers">Serendipity Team, Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
-                        <div id="2styx" class="theme release"><h4 class="theme_summary">2Styx [backend]</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="/i/t/preview_backend_fullsize_01.jpg"></dt><dd class="theme_version">version 2017, <em>BSD license</em>, 21/08/2017)</dd><dd class="theme_maintainers">Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
+                        <div id="defaultbackend" class="theme release"><h4 class="theme_summary">Default [backend]</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="../i/t/preview_backend_fullsize_00.jpg"></dt><dd class="theme_version">version 2018, <em>BSD license</em>, 03/09/2018)</dd><dd class="theme_maintainers">Serendipity Team, Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
+                        <div id="2styx" class="theme release"><h4 class="theme_summary">2Styx [backend]</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="../i/t/preview_backend_fullsize_01.jpg"></dt><dd class="theme_version">version 2017, <em>BSD license</em>, 21/08/2017)</dd><dd class="theme_maintainers">Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
                         <h4 class="core-themes-header">Styx Release: Recommended frontend themes</h4>
                         <div id="2k11" class="theme release"><h4 class="theme_summary">2k11 [standard]</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="/i/t/preview_fullsize_cr00.jpg"></dt><dd class="theme_version">version 2017, <em>BSD license</em>, 26/06/2017)</dd><dd class="theme_maintainers">Serendipity Team, Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
                         <div id="bootstrap" class="theme release"><h4 class="theme_summary">Bootstrap 4</h4><dl class="theme_meta"><dt class="theme_name"><img alt="" src="../i/t/preview_fullsize_cr01.jpg"></dt><dd class="theme_version">version 2018, v4.1, <em>BSD license</em>, 22/04/2018)</dd><dd class="theme_maintainers">Matthias Mees, Ian Styx</dd></dl><ul class="theme_actions"><li class="theme_download"><a href="//github.com/ophian/styx/releases">Download Styx</a></li></ul></div>
