--- a/next/index.html
+++ b/next/index.html
@@ -40,7 +40,7 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="//kafka/_php/div_tests/blogs/dev/next.html" tabindex="-1" title="Serendipity Styx Whats Next page">Whats Next</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/next.html" tabindex="-1" title="Serendipity Styx Whats Next page">Whats Next</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
