--- a/next/index.html
+++ b/next/index.html
@@ -40,7 +40,7 @@
 <div class="site-nav__panel" aria-hidden="true" aria-controls="site-nav__toggler">
     <nav id="main-navigation" role="navigation" aria-label="main navigation">
         <ul class="site-nav__menu">
-            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/next.html" tabindex="-1" title="Serendipity Styx Whats Next page">Whats Next</a></li>
+            <li class="site-nav__menu-item site-nav__menu-item--current"><a href="/next/index.html" tabindex="-1" title="Serendipity Styx Whats Next page">Whats Next</a></li>
         </ul>
         <p class="site-nav__menu-category">Main</p>
         <ul class="site-nav__menu" aria-label="links to styx site main pages">
@@ -134,7 +134,7 @@
                 <div class="blog-post__author-description">
                     <h3>Ian Styx (ophian)<span>Maintainer</span></h3>
                     <p class="follow"><a href="https://github.com/ophian/styx/issues" title="Styx issues" target="_blank">@ophian</a></p>
-                    <p>John Ian Styx has more than 17 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
+                    <p>John Ian Styx has more than 20 years of experience in the IT market as a developer and from 2003 as a Serendipity lover.</p>
                 </div>
             </div>
         </div>
