--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <ul id="features">
                 <li>
                     <h4 id="docs-reliability"><img src="./i/cogs.png" alt=""> Reliability</h4>
-                    <p>Serendipity wants to provide a blog engine that users can trust, for which they can get indivdual support, while being able to influence the project (both as users and developers).</p>
+                    <p>Serendipity wants to provide a blog engine that users can trust, for which they can get individual support, while being able to influence the project (both as users and developers).</p>
                 </li>
                 <li>
                     <h4 id="docs-security"><img src="./i/stethoscope.png" alt=""> Security</h4>
