--- a/features/index.html
+++ b/features/index.html
@@ -107,14 +107,14 @@
       <h3 id="docs-robust-editing-interface">Robust Editing Interface</h3>
       <p>Featuring an integrated image manager, extended entry support and a host of other features. Write with a WYSIWYG editor or use any markup language you like, including Markdown and Textile.</p>
 
-      <p><a href="/i/c/01_editor.png" rel="mfp"><img src="/i/c/01_editor_thumb.png" alt="" /></a></p>
+      <p><a href="/i/c/01_editor.png" rel="mfp"><img src="/i/c/01_editor_thumb.png" alt="editor example" /></a></p>
     </li>
     <li>
       <h3 id="docs-anti-spam">Anti-Spam</h3>
       <p>Fight spam in comments and trackbacks with Akismet, Honeypots, word filters, a local learning bayes filter, captchas or full moderation. Those means are provided by and extensible with plugins.</p>
 
       <p>
-        <a href="/i/c/02_spamplugins.png" rel="mfp"><img src="/i/c/02_spamplugins_thumb.png" alt="" /></a>
+        <a href="/i/c/02_spamplugins.png" rel="mfp"><img src="/i/c/02_spamplugins_thumb.png" alt="spamplugins example" /></a>
       </p>
     </li>
     <li>
@@ -136,24 +136,24 @@
       <p>Several themes are included by default, making it easy to everyone to change the look of the blog. For advanced users, the full flexibility of the Smarty templating engine allows to change every aspect of the Serendipity look.</p>
 
       <p id="featurethemes">
-        <a href="/i/c/08_2k11.jpg" rel="mfp"><img src="/i/c/08_2k11_thumb.jpg" alt="" /></a>
-        <a href="/i/c/09_photo.jpg" rel="mfp"><img src="/i/c/09_photo_thumb.jpg" alt="" /></a>
+        <a href="/i/c/08_2k11.jpg" rel="mfp"><img src="/i/c/08_2k11_thumb.jpg" alt="2k11 theme example" /></a>
+        <a href="/i/c/09_photo.jpg" rel="mfp"><img src="/i/c/09_photo_thumb.jpg" alt="photo theme example" /></a>
       <p>
     </li>
     <li>
       <h3 id="docs-online-repository">Online Repository</h3>
       <p>Both plugins and themes use our online repository <strong>Spartacus</strong>, installing them takes a few mouse clicks and no manual file upload! Spartacus also takes care of plugin updates.</p>
       <p id="spartacus">
-        <a href="/i/c/03_spartacus.png" rel="mfp"><img src="/i/c/03_spartacus_thumb.png" alt="" /></a>
-        <a href="/i/c/04_spartacus_sb.png" rel="mfp"><img src="/i/c/04_spartacus_sb_thumb.png" alt="" /></a>
+        <a href="/i/c/03_spartacus.png" rel="mfp"><img src="/i/c/03_spartacus_thumb.png" alt="spartacus example" /></a>
+        <a href="/i/c/04_spartacus_sb.png" rel="mfp"><img src="/i/c/04_spartacus_sb_thumb.png" alt="spartacus + sidebar example" /></a>
       <p>
     </li>
     <li>
       <h3 id="docs-documentary">Documentary</h3>
       <p>Serendipity is very well documented. For the German lang there even is a fully online readable <strong>Book</strong> available. The English have to stick to the Serendipity Styx [en] Help Center pages.</p>
       <p id="documentary">
-        <a href="/i/c/05_book.png" rel="mfp"><img src="/i/c/05_book_thumb.png" alt="" /></a>
-        <a href="/i/c/06_book_sb.png" rel="mfp"><img src="/i/c/06_book_sb_thumb.png" alt="" /></a>
+        <a href="/i/c/05_book.png" rel="mfp"><img src="/i/c/05_book_thumb.png" alt="book example" /></a>
+        <a href="/i/c/06_book_sb.png" rel="mfp"><img src="/i/c/06_book_sb_thumb.png" alt="book + sidebar example" /></a>
       <p>
     </li>
     <li>
@@ -201,7 +201,7 @@
       <p>Serendipity Styx Edition is very much alive and actively developed! Serendipity origin has been designed in 2002 and even today it is very impressing to see the foresight of upcoming necessities and edge cases over the decades from its origin developers. This is what <strong>Serendipity Styx</strong> is doing, keeping <em>honoured</em> and in touch with the <em>age</em> and still strongly walk into the bright <strong>future</strong>! If you want to participate, have a new user suggestion, or have a feature request please give me a note over Serendipity Styx GitHub issues. Main (origin) Serendipity support is given in the S9y Forum board, which still is an interesting base for all kind of (older) Serendipity regarding questions, having been asked for over the years.</p>
     </li>
     <li>
-      <p><a href="/i/c/07_documentation.png"><img src="/i/c/07_documentation_thumb.png" alt="" /></a></p>
+      <p><a href="/i/c/07_documentation.png" rel="mfp"><img src="/i/c/07_documentation_thumb.png" alt="documentary example" /></a></p>
     </li>
   </ul>
 
@@ -223,7 +223,7 @@
         <div class="blog-post__navigation">
             <div class="blog-post__navigation-inner">
                 <div class="blog-post__navigation-item blog-post__navigation-item--right">
-                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="">Home</a>
+                    <a class="blog-post__navigation-link blog-post__navigation-link--next" href="/">Home</a>
                 </div>
             </div>
         </div>
@@ -248,7 +248,7 @@
                 <div class="footer-menu__wrapper" role="navigation" aria-labelledby="menu-category-1-1">
                     <h2 id="menu-category-1-1">Site & Documentation</h2>
                     <ul class="footer-menu">
-                        <li class="icon-site"><a href="">Serendipity Styx Home</a></li>
+                        <li class="icon-site"><a href="/">Serendipity Styx Home</a></li>
                         <li class="icon-site"><a href="/blog">Serendipity Styx Blog</a></li>
                         <li class="icon-site"><a href="/book">Serendipity Styx Book [de]</a></li>
                         <li class="icon-site"><a href="/plugins">Serendipity Styx Plugins</a></li>
