hc::installation: Improve What Now

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -439,7 +439,7 @@
 
 <h4 id="docs-and-what-now">And what next?</h4>
 
-<p>Now that you have successfully installed Serendipity, go ahead and explore. Create some entries, categories, or install a few plugins, that you can also find here in <a href="/plugins/">Styx Spartacus plugins</a>. A recommended one would be the “Serendipity Autoupdate” event plugin! The interface is in most cases self-explanatory and open for experiments.</p>
+<p>Now that you have successfully installed Serendipity Styx, go ahead and explore. Create some entries, categories, or install a few plugins via Spartacus, that you can also find here in the <a href="../../plugins/">Styx Spartacus WWW mirror</a>. A recommended one for immediate install for example would be the “<b>Serendipity Autoupdate</b>” event plugin! The Spartacus interface is in most cases self-explanatory and open for experiments.</p>
 
 <p>If you have any questions, feel free to come to <a href="https://board.s9y.org/" target="_blank">the forums</a> or to browse the <a href="./index.html">docs section</a> for further documentation.</p>
 
