hc: Installation hint for upgrade tasks

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -142,7 +142,7 @@
     <pre><code>?serendipity[adminModule]=event_display&amp;serendipity[adminAction]=update&amp;serendipity[newVersion]=2.4.0</code></pre>
     (as a 1-liner) and hit ENTER - This will start the autoupdate upgrade routine. You are now at the 2cd half of upgrade guide point “f”. The new version string, ie. ‘2.4.0’, has to match the zip files version string, ie. ‘serendipity-2.4.0.zip’, which also has to match the searched docs/RELEASE file version string!</em></li>
     <li><em>Afterwards resume with point “g” to “h”! Enable “d” at last.</em></li>
-    <li>On the other hand, if you upgrade an <strong>existing</strong> Serendipity <strong>2.1.x</strong> it makes sense to <strong>downgrade</strong> your version first to <strong>‘2.0.0’</strong> in the <code>serendipity_config.inc.php</code> and in the <code>serendipity_config_local.inc.php</code> files, to get all the recommended <strong>upgrade tasks</strong> in need for Styx on upgrade (see a-h steps).</li>
+    <li>On the other hand, if you upgrade an <strong>existing</strong> Serendipity <strong>2.1.x</strong> it makes sense to <strong>downgrade</strong> your version first to <strong>‘2.0.0’</strong> in the <code>serendipity_config.inc.php</code> and in the <code>serendipity_config_local.inc.php</code> files, to get all the recommended and necessary <strong>upgrade tasks</strong> in need for Styx on upgrade (see a-h steps).</li>
 </ul>
 
 <p><strong>Read and follow carefully:</strong></p>
