hc: Add update note IV to the upgrade guide

--- a/hc/en/installation.html
+++ b/hc/en/installation.html
@@ -173,6 +173,7 @@
     <li> Fresh Styx installs will have to set the URLs too; In this mentioned order! (<em>Except step a. for [4].</em>).</li>
     <li> [ <strong>Update</strong> ]:<br>With Styx 2.1++ releases, the Spartacus custom mirror g.[5] and the general setting h.[8] are already preset for <strong>new</strong> installations.</li>
     <li> [ <strong>Update</strong> ]:<br>Newer versions of the Serendipity Autoupdater from this repository already also have [6] and [7] preset for <strong>new</strong> installations.</li>
+    <li> [ <strong>Update</strong> ]:<br>Since the Serendipity Styx 2.6-beta1 release, read and scroll down to the <a href="https://ophian.github.io/blog/"><em>BLOG NOTES</em></a> for the 2.6-beta1, you <strong>don't</strong> need to care about these URLs any more, neither for Spartacus, the Configuration, nor the Autoupdater!</li>
 </ol>
 
 <hr>
